--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ target/
 .classpath
 .project
 .settings
-
+src/main/java/org/example/Persistencia/pass.env
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
